objects/Dummay__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <summarizedField>Individual_Ticket_Info__c.Total_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Individual_Ticket_Info__c.Is_Input__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Individual_Ticket_Info__c.Registration_Info__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AttendeeSummary__c</fullName>
        <label>Attendee</label>
        <referenceTo>AttendeeSummary__c</referenceTo>
        <relationshipLabel>Registration Info</relationshipLabel>
        <relationshipName>Registration_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attendees_Available__c</fullName>
        <label>Attendees Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Available_Quantity__c</fullName>
        <label>Available Quantity</label>
        <summaryFilterItems>
            <field>Individual_Ticket_Info__c.isCancelled__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Individual_Ticket_Info__c.Is_Input__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Individual_Ticket_Info__c.Registration_Info__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Booth_admins_available__c</fullName>
        <label>Booth admins available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Check_number__c</fullName>
        <label>Check number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChekIns_Total__c</fullName>
        <label>ChekIns Total</label>
        <summaryFilterItems>
            <field>Individual_Ticket_Info__c.IsCheckedIn__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Individual_Ticket_Info__c.Registration_Info__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Number__c</fullName>
        <label>Credit Card Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiscountValue__c</fullName>
        <label>DiscountValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Attendee_Mapping__c</fullName>
        <label>Event_Attendee_Mapping</label>
        <referenceTo>Event_Attendee_Mapping__c</referenceTo>
        <relationshipLabel>Registration Info</relationshipLabel>
        <relationshipName>Registration_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipName>Dummays</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>For_Refund__c</fullName>
        <formula>IF( ChekIns_Total__c != Available_Quantity__c , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>For Refund</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IndividualAmount__c</fullName>
        <formula>IF( TicketTypes__c != NULL, TicketAmount__c / Tickets_Quantty__c, TicketAmount__c / Item_Quantity__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IndividualAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Individual_Amount_After_Discount__c</fullName>
        <label>IndividualAmount After Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InvoiceEmail__c</fullName>
        <label>InvoiceEmail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Amount__c</fullName>
        <formula>Item__r.Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_Quantity__c</fullName>
        <label>Item Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Registration Info</relationshipLabel>
        <relationshipName>Registration_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <label>Payment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Paid</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Free</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guest</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Attendee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Attendee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <label>Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promocode__c</fullName>
        <label>Promocode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registered_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registered Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ScanAttendee_Fee__c</fullName>
        <label>ScanAttendee Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Seat_Number__c</fullName>
        <label>Seat Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TicketAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TicketAmount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TicketTypes__c</fullName>
        <label>TicketTypes</label>
        <referenceTo>TicketTypes__c</referenceTo>
        <relationshipName>Dummays</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ticket_Amount__c</fullName>
        <formula>TicketTypes__r.TT_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ticket Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ticket_Number__c</fullName>
        <label>Ticket Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tickets_Quantty__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Tickets Quantty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <formula>Amount__c  +  ScanAttendee_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Update_with_created_date__c</fullName>
        <label>Update with created date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>customer_key__c</fullName>
        <label>customer key</label>
        <referenceTo>Constomer__c</referenceTo>
        <relationshipName>Dummays</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isCheckedIn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCheckedIn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>payKey__c</fullName>
        <label>payKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>temp2__c</fullName>
        <label>temp2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>temp3__c</fullName>
        <label>temp3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>temp__c</fullName>
        <label>temp1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Registration Info</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Event_Attendee_Mapping__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Event__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Company__c</columns>
        <columns>DiscountValue__c</columns>
        <columns>customer_key__c</columns>
        <columns>Email__c</columns>
        <columns>Payment_Status__c</columns>
        <columns>Payment_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Cannacon</fullName>
        <columns>NAME</columns>
        <columns>Event_Attendee_Mapping__c</columns>
        <columns>customer_key__c</columns>
        <columns>Payment_Type__c</columns>
        <columns>TicketAmount__c</columns>
        <columns>Payment_Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email__c</columns>
        <columns>Phone__c</columns>
        <columns>Company__c</columns>
        <columns>Primary_Attendee__c</columns>
        <columns>TicketTypes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event__c</field>
            <operation>equals</operation>
            <value>QR_EVT_0415_0261055</value>
        </filters>
        <filters>
            <field>Payment_Type__c</field>
            <operation>notEqual</operation>
            <value>Guest,Cash,Free</value>
        </filters>
        <label>Cannacon</label>
    </listViews>
    <listViews>
        <fullName>Connecticut_Business_Matchmaker_2015</fullName>
        <columns>NAME</columns>
        <columns>Event_Attendee_Mapping__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email__c</columns>
        <columns>customer_key__c</columns>
        <columns>Payment_Type__c</columns>
        <columns>Payment_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>TicketAmount__c</columns>
        <columns>Ticket_Amount__c</columns>
        <columns>Phone__c</columns>
        <columns>Company__c</columns>
        <columns>TicketTypes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event__c</field>
            <operation>equals</operation>
            <value>QR_EVT_1614_0249024</value>
        </filters>
        <label>Connecticut Business Matchmaker 2015</label>
    </listViews>
    <listViews>
        <fullName>Special_Needs_Expo_LI</fullName>
        <columns>NAME</columns>
        <columns>customer_key__c</columns>
        <columns>Event_Attendee_Mapping__c</columns>
        <columns>DiscountValue__c</columns>
        <columns>Promocode__c</columns>
        <columns>TicketTypes__c</columns>
        <columns>Payment_Type__c</columns>
        <columns>Email__c</columns>
        <columns>Tickets_Quantty__c</columns>
        <columns>TicketAmount__c</columns>
        <columns>Ticket_Amount__c</columns>
        <columns>Company__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event__c</field>
            <operation>equals</operation>
            <value>QR_EVT_0813_0072295</value>
        </filters>
        <filters>
            <field>Event_Attendee_Mapping__c</field>
            <operation>equals</operation>
        </filters>
        <label>Special Needs Expo LI</label>
    </listViews>
    <listViews>
        <fullName>TEDX</fullName>
        <columns>NAME</columns>
        <columns>AttendeeSummary__c</columns>
        <columns>customer_key__c</columns>
        <columns>Email__c</columns>
        <columns>Event_Attendee_Mapping__c</columns>
        <columns>Payment_Status__c</columns>
        <columns>Payment_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>TicketTypes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event__c</field>
            <operation>equals</operation>
            <value>QR_EVT_3014_0246026</value>
        </filters>
        <label>TEDX</label>
    </listViews>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Dummay Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registration Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>